The starting point for a friendly project

--- a/EmployeeProgram.vcxproj.filters
+++ b/EmployeeProgram.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="EmployeeProgram.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Daddy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Daddy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
